--- a/TaxCalculator/Dockerfile
+++ b/TaxCalculator/Dockerfile
@@ -1,18 +1,22 @@
-# Use official .NET SDK image
+# Use official .NET runtime as base
 FROM mcr.microsoft.com/dotnet/aspnet:8.0 AS base
 WORKDIR /app
 EXPOSE 8080
 
-# Build stage
+# Use SDK image to build the app
 FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
 WORKDIR /src
-COPY ["TaxCalculator.csproj", "TaxCalculator/"]
-RUN dotnet restore "TaxCalculator/TaxCalculator.csproj"
-COPY . .
-WORKDIR "/src/TaxCalculator"
+
+# Copy project file and restore dependencies
+COPY TaxCalculator.csproj ./
+RUN dotnet restore "TaxCalculator.csproj"
+
+# Copy the rest of the application
+COPY . .  
+WORKDIR /src
 RUN dotnet publish "TaxCalculator.csproj" -c Release -o /app/publish
 
-# Final stage
+# Final stage: Run the app
 FROM base AS final
 WORKDIR /app
 COPY --from=build /app/publish .
